Added rising stage

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -12,6 +12,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using Dates"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -63,6 +79,59 @@
     "\n",
     "__Returns__:\n",
     "- Initial Positions of all the dandelions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function DO(Popsize, Maxiteration, LB, UB, Dim, Fobj)\n",
+    "    start_time = time()\n",
+    "    dandelions = initialization(Popsize, Dim, UB, LB)\n",
+    "    dandelionsFitness = zeros(Popsize)\n",
+    "    Convergence_curve = zeros(Maxiteration)\n",
+    "    for i in 1:Popsize\n",
+    "        dandelionsFitness[i] = Fobj(dandelions[i, :])\n",
+    "    end\n",
+    "\n",
+    "    # Calculate the fitness values of initial dandelions.\n",
+    "    sorted_indexes = sortperm(dandelionsFitness)\n",
+    "    Best_position = dandelions[sorted_indexes[1], :]\n",
+    "    Best_fitness = dandelionsFitness[sorted_indexes[1]]\n",
+    "    Convergence_curve[1] = Best_fitness\n",
+    "    t = 2\n",
+    "\n",
+    "\twhile t < Maxiteration + 1\n",
+    "    \n",
+    "\t\t## Rising stage\n",
+    "\t\tbeta = randn(Popsize, Dim)\n",
+    "\t\talpha = rand() * ((1 / Maxiteration^2) * t^2 - 2 / Maxiteration * t + 1)  # eq.(8) in this paper\n",
+    "\t\ta = 1 / (Maxiteration^2 - 2 * Maxiteration + 1)  # Note: U can use positive or negative on 1 for solving ur problem.\n",
+    "\t\tb = -2a\n",
+    "\t\tc = 1 - a - b\n",
+    "\t\tk = 1 - rand() * (c + a * t^2 + b * t)  # eq.(11) in this paper\n",
+    "\t\tif randn() < 1.5\n",
+    "\t\t\tfor i in 1:Popsize\n",
+    "\t\t\t\tlamb = abs(randn(1, Dim))\n",
+    "\t\t\t\ttheta = (2 * rand() - 1) * pi\n",
+    "\t\t\t\trow = 1 / exp(theta)\n",
+    "\t\t\t\tvx = row * cos(theta)\n",
+    "\t\t\t\tvy = row * sin(theta)\n",
+    "\t\t\t\tNEW = rand(1, Dim) .* (UB .- LB) .+ LB\n",
+    "\t\t\t\tdandelions_1[i, :] .= dandelions[i, :] .+ alpha .* vx .* vy .* lognpdf.(lamb, 0, 1) .* (NEW .- dandelions[i, :])  # eq.(5) in this paper\n",
+    "\t\t\tend\n",
+    "\t\telse\n",
+    "\t\t\tfor i in 1:Popsize\n",
+    "\t\t\t\tdandelions_1[i, :] .= dandelions[i, :] .* k  # eq.(10) in this paper\n",
+    "\t\t\tend\n",
+    "\t\tend\n",
+    "\t\tdandelions .= dandelions_1\n",
+    "\t\t# Check boundaries\n",
+    "\t\tdandelions .= max.(dandelions, LB)\n",
+    "\t\tdandelions .= min.(dandelions, UB)\n",
+    "\t"
    ]
   }
  ],
