Added decline stage

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -131,7 +131,19 @@
     "\t\t# Check boundaries\n",
     "\t\tdandelions .= max.(dandelions, LB)\n",
     "\t\tdandelions .= min.(dandelions, UB)\n",
-    "\t"
+    "\t\t\n",
+    "\t\t## Decline stage\n",
+    "\t\tdandelions_mean = sum(dandelions, dims=1) / Popsize  # eq.(14) in this paper\n",
+    "\t\tdandelions_2 = similar(dandelions)  # Preallocate dandelions_2 array\n",
+    "\t\tfor i in 1:Popsize\n",
+    "\t\t\tfor j in 1:Dim\n",
+    "\t\t\t\tdandelions_2[i, j] = dandelions[i, j] - beta[i, j] * alpha * (dandelions_mean[1, j] - beta[i, j] * alpha * dandelions[i, j])  # eq.(13) in this paper\n",
+    "\t\t\tend\n",
+    "\t\tend\n",
+    "\t\tdandelions .= dandelions_2\n",
+    "\t\t# Check boundaries\n",
+    "\t\tdandelions .= max.(dandelions, LB)\n",
+    "\t\tdandelions .= min.(dandelions, UB)\n"
    ]
   }
  ],
