Added CEC 2017 benchmark functions

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Initialization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +78,337 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above function initializes the starting positions of Dandelions.<br><br>\n",
+    "The above function initializes the starting positions of Dandelions.<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Benchmark Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F23 (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function Get_Functions_details(F)\n",
+    "    Fobj = nothing\n",
+    "    LB = nothing\n",
+    "    UB = nothing\n",
+    "    Dim = nothing\n",
+    "\n",
+    "    if F == \"F1\"\n",
+    "        Fobj = F1\n",
+    "        LB = -100\n",
+    "        UB = 100\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F2\"\n",
+    "        Fobj = F2\n",
+    "        LB = -10\n",
+    "        UB = 10\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F3\"\n",
+    "        Fobj = F3\n",
+    "        LB = -100\n",
+    "        UB = 100\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F4\"\n",
+    "        Fobj = F4\n",
+    "        LB = -100\n",
+    "        UB = 100\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F5\"\n",
+    "        Fobj = F5\n",
+    "        LB = -30\n",
+    "        UB = 30\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F6\"\n",
+    "        Fobj = F6\n",
+    "        LB = -100\n",
+    "        UB = 100\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F7\"\n",
+    "        Fobj = F7\n",
+    "        LB = -1.28\n",
+    "        UB = 1.28\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F8\"\n",
+    "        Fobj = F8\n",
+    "        LB = -500\n",
+    "        UB = 500\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F9\"\n",
+    "        Fobj = F9\n",
+    "        LB = -5.12\n",
+    "        UB = 5.12\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F10\"\n",
+    "        Fobj = F10\n",
+    "        LB = -32\n",
+    "        UB = 32\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F11\"\n",
+    "        Fobj = F11\n",
+    "        LB = -600\n",
+    "        UB = 600\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F12\"\n",
+    "        Fobj = F12\n",
+    "        LB = -50\n",
+    "        UB = 50\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F13\"\n",
+    "        Fobj = F13\n",
+    "        LB = -50\n",
+    "        UB = 50\n",
+    "        Dim = 30\n",
+    "    elseif F == \"F14\"\n",
+    "        Fobj = F14\n",
+    "        LB = -65.536\n",
+    "        UB = 65.536\n",
+    "        Dim = 2\n",
+    "    elseif F == \"F15\"\n",
+    "        Fobj = F15\n",
+    "        LB = -5\n",
+    "        UB = 5\n",
+    "        Dim = 4\n",
+    "    elseif F == \"F16\"\n",
+    "        Fobj = F16\n",
+    "        LB = -5\n",
+    "        UB = 5\n",
+    "        Dim = 2\n",
+    "    elseif F == \"F17\"\n",
+    "        Fobj = F17\n",
+    "        LB = [-5, 0]\n",
+    "        UB = [10, 15]\n",
+    "        Dim = 2\n",
+    "    elseif F == \"F18\"\n",
+    "        Fobj = F18\n",
+    "        LB = -2\n",
+    "        UB = 2\n",
+    "        Dim = 2\n",
+    "    elseif F == \"F19\"\n",
+    "        Fobj = F19\n",
+    "        LB = 0\n",
+    "        UB = 1\n",
+    "        Dim = 3\n",
+    "    elseif F == \"F20\"\n",
+    "        Fobj = F20\n",
+    "        LB = 0\n",
+    "        UB = 1\n",
+    "        Dim = 6\n",
+    "    elseif F == \"F21\"\n",
+    "        Fobj = F21\n",
+    "        LB = 0\n",
+    "        UB = 10\n",
+    "        Dim = 4\n",
+    "    elseif F == \"F22\"\n",
+    "        Fobj = F22\n",
+    "        LB = 0\n",
+    "        UB = 10\n",
+    "        Dim = 4\n",
+    "    elseif F == \"F23\"\n",
+    "        Fobj = F23\n",
+    "        LB = 0\n",
+    "        UB = 10\n",
+    "        Dim = 4\n",
+    "    end\n",
+    "\n",
+    "    return LB, UB, Dim, Fobj\n",
+    "end\n",
+    "\n",
+    "# Define all benchmark functions below this line\n",
+    "\n",
+    "# F1\n",
+    "function F1(x)\n",
+    "    return sum(x.^2)\n",
+    "end\n",
+    "\n",
+    "# F2\n",
+    "function F2(x)\n",
+    "    return sum(abs.(x)) + prod(abs.(x))\n",
+    "end\n",
+    "\n",
+    "# F3\n",
+    "function F3(x)\n",
+    "    dim = size(x, 2)\n",
+    "    o = 0\n",
+    "    for i in 1:dim\n",
+    "        o += sum(x[1:i])^2\n",
+    "    end\n",
+    "    return o\n",
+    "end\n",
+    "\n",
+    "# F4\n",
+    "function F4(x)\n",
+    "    return maximum(abs.(x))\n",
+    "end\n",
+    "\n",
+    "# F5\n",
+    "function F5(x)\n",
+    "    dim = size(x, 2)\n",
+    "    return sum(100 * (x[2:dim] - x[1:dim-1].^2).^2 + (x[1:dim-1] - 1).^2)\n",
+    "end\n",
+    "\n",
+    "# F6\n",
+    "function F6(x)\n",
+    "    return sum(abs.(x .+ 0.5).^2)\n",
+    "end\n",
+    "\n",
+    "# F7\n",
+    "function F7(x)\n",
+    "    dim = size(x, 2)\n",
+    "    return sum(collect(1:dim) .* x.^4) + rand()\n",
+    "end\n",
+    "\n",
+    "# F8\n",
+    "function F8(x)\n",
+    "    return sum(-x .* sin.(sqrt.(abs.(x))))\n",
+    "end\n",
+    "\n",
+    "# F9\n",
+    "function F9(x)\n",
+    "    dim = size(x, 2)\n",
+    "    return sum(x.^2 - 10 * cos.(2 * π .* x)) + 10 * dim\n",
+    "end\n",
+    "\n",
+    "# F10\n",
+    "function F10(x)\n",
+    "    dim = size(x, 2)\n",
+    "    return -20exp(-0.2sqrt(sum(x.^2) / dim)) - exp(sum(cos.(2 * π .* x)) / dim) + 20 + ℯ\n",
+    "end\n",
+    "\n",
+    "# F11\n",
+    "function F11(x)\n",
+    "    dim = size(x, 2)\n",
+    "    return sum(x.^2) / 4000 - prod(cos.(x ./ sqrt.(collect(1:dim)))) + 1\n",
+    "end\n",
+    "\n",
+    "# F12\n",
+    "function F12(x)\n",
+    "    dim = size(x, 2)\n",
+    "    return (π / dim) * (10 * ((sin.(π * (1 .+ (x[1:end-1] .+ 1) / 4)))^2) + sum((((x[1:end-1] .+ 1) / 4).^2) .* (1 .+ 10 .* ((sin.(π .* (1 .+ (x[2:end] .+ 1) / 4)))) .^ 2)) + (((x[dim] + 1) / 4)^2) + sum(Ufun(x, 10, 100, 4)))\n",
+    "end\n",
+    "\n",
+    "# F13\n",
+    "function F13(x)\n",
+    "    dim = size(x, 2)\n",
+    "    return 0.1 * ((sin.(3 * π * x[1]))^2 + sum((x[1:dim-1] .- 1).^2 .* (1 .+ (sin.(3 * π .* x[2:dim])) .^ 2)) + ((x[dim] - 1)^2) * (1 .+ (sin.(2 * π * x[dim])))^2) + sum(Ufun(x, 5, 100, 4))\n",
+    "end\n",
+    "\n",
+    "# F14\n",
+    "function F14(x)\n",
+    "    aS = [-32 -16 0 16 32 -32 -16 0 16 32 -32 -16 0 16 32 -32 -16 0 16 32 -32 -16 0 16 32; -32 -32 -32 -32 -32 -16 -16 -16 -16 -16 0 0 0 0 0 16 16 16 16 16 32 32 32 32 32]\n",
+    "    bS = [sum((x' .- aS[:, j]) .^ 6) for j in 1:25]\n",
+    "    return (1 / 500 + sum(1 ./ (collect(1:25) .+ bS)))^(-1)\n",
+    "end\n",
+    "\n",
+    "# F15\n",
+    "function F15(x)\n",
+    "    aK = [0.1957, 0.1947, 0.1735, 0.16, 0.0844, 0.0627, 0.0456, 0.0342, 0.0323, 0.0235, 0.0246]\n",
+    "    bK = 1 ./ [0.25, 0.5, 1, 2, 4, 6, 8, 10, 12, 14, 16]\n",
+    "    return sum((aK .- (x[1] .* (bK .^ 2 .+ x[2] .* bK) ./ (bK .^ 2 .+ x[3] .* bK .+ x[4]))).^2)\n",
+    "end\n",
+    "\n",
+    "# F16\n",
+    "function F16(x)\n",
+    "    return 4 * x[1]^2 - 2.1 * x[1]^4 + x[1]^6 / 3 + x[1] * x[2] - 4 * x[2]^2 + 4 * x[2]^4\n",
+    "end\n",
+    "\n",
+    "# F17\n",
+    "function F17(x)\n",
+    "    return (x[2] - (x[1]^2) * 5.1 / (4 * (π^2)) + 5 / π * x[1] - 6)^2 + 10 * (1 - 1 / (8 * π)) * cos(x[1]) + 10\n",
+    "end\n",
+    "\n",
+    "# F18\n",
+    "function F18(x)\n",
+    "    return (1 + (x[1] + x[2] + 1)^2 * (19 - 14 * x[1] + 3 * (x[1]^2) - 14 * x[2] + 6 * x[1] * x[2] + 3 * x[2]^2)) * (30 + (2 * x[1] - 3 * x[2])^2 * (18 - 32 * x[1] + 12 * (x[1]^2) + 48 * x[2] - 36 * x[1] * x[2] + 27 * x[2]^2))\n",
+    "end\n",
+    "\n",
+    "# F19\n",
+    "function F19(x)\n",
+    "    aH = [3 10 30; 0.1 10 35; 3 10 30; 0.1 10 35]\n",
+    "    cH = [1, 1.2, 3, 3.2]\n",
+    "    pH = [0.3689 0.117 0.2673; 0.4699 0.4387 0.747; 0.1091 0.8732 0.5547; 0.03815 0.5743 0.8828]\n",
+    "    o = 0\n",
+    "    for i in 1:4\n",
+    "        o -= cH[i] * exp(-(sum(aH[i, :] .* ((x .- pH[i, :]).^2))))\n",
+    "    end\n",
+    "    return o\n",
+    "end\n",
+    "\n",
+    "# F20\n",
+    "function F20(x)\n",
+    "    aH = [10 3 17 3.5 1.7 8; 0.05 10 17 0.1 8 14; 3 3.5 1.7 10 17 8; 17 8 0.05 10 0.1 14]\n",
+    "    cH = [1, 1.2, 3, 3.2]\n",
+    "    pH = [0.1312 0.1696 0.5569 0.0124 0.8283 0.5886; 0.2329 0.4135 0.8307 0.3736 0.1004 0.9991; 0.2348 0.1415 0.3522 0.2883 0.3047 0.6650; 0.4047 0.8828 0.8732 0.5743 0.1091 0.0381]\n",
+    "    o = 0\n",
+    "    for i in 1:4\n",
+    "        o -= cH[i] * exp(-sum(aH[i, :] .* ((x .- pH[i, :]).^2)))\n",
+    "    end\n",
+    "    return o\n",
+    "end\n",
+    "\n",
+    "# F21\n",
+    "function F21(x)\n",
+    "    aSH = [4 4 4 4; 1 1 1 1; 8 8 8 8; 6 6 6 6; 3 7 3 7; 2 9 2 9; 5 5 3 3; 8 1 8 1; 6 2 6 2; 7 3.6 7 3.6]\n",
+    "    cSH = [0.1, 0.2, 0.2, 0.4, 0.4, 0.6, 0.3, 0.7, 0.5, 0.5]\n",
+    "    o = 0\n",
+    "    for i in 1:5\n",
+    "        o -= ((x .- aSH[i, :]) * (x .- aSH[i, :])' .+ cSH[i])^(-1)\n",
+    "    end\n",
+    "    return o\n",
+    "end\n",
+    "\n",
+    "# F22\n",
+    "function F22(x)\n",
+    "    aSH = [4 4 4 4; 1 1 1 1; 8 8 8 8; 6 6 6 6; 3 7 3 7; 2 9 2 9; 5 5 3 3; 8 1 8 1; 6 2 6 2; 7 3.6 7 3.6]\n",
+    "    cSH = [0.1, 0.2, 0.2, 0.4, 0.4, 0.6, 0.3, 0.7, 0.5, 0.5]\n",
+    "    o = 0\n",
+    "    for i in 1:7\n",
+    "        o -= ((x .- aSH[i, :]) * (x .- aSH[i, :])' .+ cSH[i])^(-1)\n",
+    "    end\n",
+    "    return o\n",
+    "end\n",
+    "\n",
+    "# F23\n",
+    "function F23(x)\n",
+    "    aSH = [4 4 4 4; 1 1 1 1; 8 8 8 8; 6 6 6 6; 3 7 3 7; 2 9 2 9; 5 5 3 3; 8 1 8 1; 6 2 6 2; 7 3.6 7 3.6]\n",
+    "    cSH = [0.1, 0.2, 0.2, 0.4, 0.4, 0.6, 0.3, 0.7, 0.5, 0.5]\n",
+    "    o = 0\n",
+    "    for i in 1:10\n",
+    "        o -= ((x .- aSH[i, :]) * (x .- aSH[i, :])' .+ cSH[i])^(-1)\n",
+    "    end\n",
+    "    return o\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implemented CEC 2017 functions in Julia since we couldn't find any implementations for the same online.<br><br>\n",
+    "These have been implemented in the same way as done in the Matlab code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dandelion Optimizer\n",
     "__Parameters__:\n",
     "- Popsize: Determines the number of dandelions initialized\n",
     "- Dim: States the number of dimensions of the problem\n",
