Added landing phase and fitness evaluation

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -22,9 +22,33 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m registry at `C:\\Users\\neeru\\.julia\\registries\\General.toml`\n",
+      "\u001b[32m\u001b[1m   Resolving\u001b[22m\u001b[39m package versions...\n",
+      "\u001b[32m\u001b[1m    Updating\u001b[22m\u001b[39m `C:\\Users\\neeru\\.julia\\environments\\v1.10\\Project.toml`\n",
+      "  \u001b[90m[276daf66] \u001b[39m\u001b[92m+ SpecialFunctions v2.3.1\u001b[39m\n",
+      "\u001b[32m\u001b[1m  No Changes\u001b[22m\u001b[39m to `C:\\Users\\neeru\\.julia\\environments\\v1.10\\Manifest.toml`\n"
+     ]
+    }
+   ],
+   "source": [
+    "import Pkg; Pkg.add(\"SpecialFunctions\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "using Dates"
+    "using Dates\n",
+    "using SpecialFunctions\n",
+    "using Distributions\n",
+    "using Random"
    ]
   },
   {
@@ -36,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,8 +69,9 @@
        "initialization (generic function with 1 method)"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -90,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -99,8 +124,9 @@
        "F23 (generic function with 1 method)"
       ]
      },
+     "execution_count": 12,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -420,9 +446,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "levy (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function levy(n, m, beta)\n",
+    "    numerator = gamma(1+beta)*sin(pi*beta/2)\n",
+    "    denominator = gamma((1+beta)/2)*beta*2^((beta-1)/2)\n",
+    "    sigma_u = (num/den)^(1/beta)\n",
+    "    u = rand(Normal(0,sigma_u^2), (n, m))\n",
+    "    v = rand(Normal(0,1), (n, m))\n",
+    "    z = u./(abs.(v).^(1/beta))\n",
+    "    return z\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DO (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function DO(Popsize, Maxiteration, LB, UB, Dim, Fobj)\n",
     "    start_time = time()\n",
@@ -441,6 +506,8 @@
     "    t = 2\n",
     "\n",
     "\twhile t < Maxiteration + 1\n",
+    "\n",
+    "        dandelions_1 = zeros(Popsize, Dim)\n",
     "    \n",
     "\t\t## Rising stage\n",
     "\t\tbeta = randn(Popsize, Dim)\n",
@@ -451,7 +518,7 @@
     "\t\tk = 1 - rand() * (c + a * t^2 + b * t)  # eq.(11) in this paper\n",
     "\t\tif randn() < 1.5\n",
     "\t\t\tfor i in 1:Popsize\n",
-    "\t\t\t\tlamb = abs(randn(1, Dim))\n",
+    "\t\t\t\tlamb = abs.(randn(1, Dim))\n",
     "\t\t\t\ttheta = (2 * rand() - 1) * pi\n",
     "\t\t\t\trow = 1 / exp(theta)\n",
     "\t\t\t\tvx = row * cos(theta)\n",
@@ -480,8 +547,76 @@
     "\t\tdandelions .= dandelions_2\n",
     "\t\t# Check boundaries\n",
     "\t\tdandelions .= max.(dandelions, LB)\n",
-    "\t\tdandelions .= min.(dandelions, UB)\n"
+    "\t\tdandelions .= min.(dandelions, UB)\n",
+    "\n",
+    "        ## Landing stage\n",
+    "        Step_length = levy(Popsize,Dim,1.5)\n",
+    "        Elite= repmat(Best_position,Popsize,1)\n",
+    "        for i in 1:Popsize\n",
+    "            for j in 1:Dim\n",
+    "                dandelions_3[i, j]=Elite[i,j]+Step_length[i,j]*alpha*(Elite[i,j]-dandelions[i,j]*(2*t/Maxiteration))\n",
+    "            end\n",
+    "        end\n",
+    "        dandelions=dandelions_3\n",
+    "\n",
+    "        # Check boundaries\n",
+    "        dandelions .= max.(dandelions, LB)\n",
+    "        dandelions .= min.(dandelions, LB)\n",
+    "\n",
+    "        # Calculate fitness values\n",
+    "        for i in 1:Popsize\n",
+    "            dandelionsFitness[i]=Fobj(dandelions[i, :])\n",
+    "        end\n",
+    "\n",
+    "        sorted_indexes = sortperm(dandelionsFitness)\n",
+    "        dandelions=dandelions[sorted_indexes[popsize],:]\n",
+    "        SortedfitbestN = dandelionsFitness[sorted_indexes[1:Popsize]]\n",
+    "\n",
+    "        # Update optimal seed\n",
+    "        if SortedfitbestN[1] < Best_fitness\n",
+    "            Best_position=dandelions[1,:]\n",
+    "            Best_fitness=SortfitbestN[1]\n",
+    "        end\n",
+    "\n",
+    "        Convergence_curve[t] = Best_fitness\n",
+    "        t = t + 1\n",
+    "    end\n",
+    "    end_time = time()\n",
+    "    total_time = end_time - start_time\n",
+    "    return Best_fitness, Best_position, total_time\n",
+    "end\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: `lognpdf` not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `lognpdf` not defined",
+      "",
+      "Stacktrace:",
+      " [1] DO(Popsize::Int64, Maxiteration::Int64, LB::Int64, UB::Int64, Dim::Int64, Fobj::typeof(F1))",
+      "   @ Main .\\In[22]:36",
+      " [2] top-level scope",
+      "   @ In[23]:1"
+     ]
+    }
+   ],
+   "source": [
+    "DO(30, 30, 5, 20, 50, F1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -498,5 +633,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
