--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -278,8 +278,11 @@
     "\n",
     "# F5\n",
     "function F5(x)\n",
-    "    dim = size(x, 2)\n",
-    "    return sum(100 * (x[2:dim] .- x[1:dim-1].^2).^2 + (x[1:dim-1] .- 1).^2)\n",
+    "    sum = 0.0\n",
+    "    for i in 1:length(x)-1\n",
+    "        sum += 100 * (x[i+1] - x[i]^2)^2 + (1 - x[i])^2\n",
+    "    end\n",
+    "    return sum\n",
     "end\n",
     "\n",
     "# F6\n",
