Added tour cost of tsp

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2123,6 +2123,37 @@
     "\n",
     "println(results_df)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dandelion Optimizer with TSP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compute cost of tsp tour\n",
+    "function tour_cost(d::Array{Float64,2}, o::Array{Int64,1})\n",
+    "    n=length(o)\n",
+    "    result = d[o[n],o[1]]\n",
+    "    for i in 1:(n-1)\n",
+    "        result += d[o[i],o[i+1]]\n",
+    "    end\n",
+    "    return result\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
