2opt and 3opt added

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2133,9 +2133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tour_cost (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# compute cost of tsp tour\n",
     "function tour_cost(d::Array{Float64,2}, o::Array{Int64,1})\n",
@@ -2150,10 +2160,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "two_opt_tsp (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# flip segment\n",
+    "function two_opt_swap(tour::Array{Int64,1}, i::Int64, j::Int64)\n",
+    "    n = length(tour)\n",
+    "    new_tour = copy(tour)\n",
+    "    new_tour[i:j] = reverse(new_tour[i:j])\n",
+    "    return new_tour\n",
+    "end\n",
+    "\n",
+    "function two_opt_tsp(d::Array{Float64,2}, tsp::Array{Int64,1})\n",
+    "    n = length(tsp)\n",
+    "    \n",
+    "    # initialize \n",
+    "    best_tour = copy(tsp)\n",
+    "    best_cost = tour_cost(d, best_tour)\n",
+    "    \n",
+    "    improved = true\n",
+    "    while improved\n",
+    "        improved = false\n",
+    "        # two nested loops\n",
+    "        for i in 1:(n-1), j in (i+1):n\n",
+    "            if i == 1 && j == n\n",
+    "                #println(\"skip!\")\n",
+    "            else\n",
+    "                new_candidate = two_opt_swap(best_tour, i, j)\n",
+    "                candidate_cost = tour_cost(d, new_candidate)\n",
+    "                if candidate_cost < best_cost\n",
+    "                    best_tour = new_candidate\n",
+    "                    best_cost = candidate_cost\n",
+    "                    improved = true\n",
+    "                    break\n",
+    "                end\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "    return best_tour, best_cost\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "three_opt_tsp (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Swap segments for 3-opt\n",
+    "function three_opt_swap(tour::Array{Int64, 1}, i::Int64, j::Int64, k::Int64)\n",
+    "    n = length(tour)\n",
+    "    new_tour = copy(tour)\n",
+    "    new_tour[i:j] = reverse(new_tour[i:j])\n",
+    "    new_tour[j+1:k] = reverse(new_tour[j+1:k])\n",
+    "    return new_tour\n",
+    "end\n",
+    "\n",
+    "# 3-opt TSP implementation\n",
+    "function three_opt_tsp(d::Array{Float64, 2}, tsp::Array{Int64, 1})\n",
+    "    n = length(tsp)\n",
+    "\n",
+    "    # Initialize\n",
+    "    best_tour = copy(tsp)\n",
+    "    best_cost = tour_cost(d, best_tour)\n",
+    "\n",
+    "    improved = true\n",
+    "    while improved\n",
+    "        improved = false\n",
+    "        for i in 1:(n-2), j in (i+1):(n-1), k in (j+1):n\n",
+    "            new_candidate = three_opt_swap(best_tour, i, j, k)\n",
+    "            candidate_cost = tour_cost(d, new_candidate)\n",
+    "            if candidate_cost < best_cost\n",
+    "                best_tour = new_candidate\n",
+    "                best_cost = candidate_cost\n",
+    "                improved = true\n",
+    "                break\n",
+    "            end\n",
+    "        end\n",
+    "    end\n",
+    "    return best_tour, best_cost\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Landing stage combine it later with the code\n",
+    "function levy_single(beta)\n",
+    "    num = gamma(1+beta) * sin(pi * beta / 2)\n",
+    "    den = gamma((1+beta) / 2) * beta * 2^((beta-1) / 2)\n",
+    "    sigma_u = (num / den)^(1 / beta)\n",
+    "    u = rand(Normal(0, sigma_u^2))\n",
+    "    v = rand(Normal(0, 1))\n",
+    "    z = u / (abs(v)^(1 / beta))\n",
+    "    return z\n",
+    "end\n",
+    "\n",
+    "if levy_single(1.5) > 0\n",
+    "\n",
+    "else\n",
+    "\n",
+    "end"
+   ]
   }
  ],
  "metadata": {
