--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2286,6 +2286,47 @@
     "\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "initialization (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function initialization(cities, d, Popsize, Dim)\n",
+    "    d=pairwise(Euclidean(), cities, dims=2)\n",
+    "    \n",
+    "    tours = []\n",
+    "    costs = []\n",
+    "    for i in 1:Popsize\n",
+    "        tour = [1:1:Dim;]\n",
+    "        tour = tour[randperm(length(tour))]\n",
+    "        push!(tours, tour)\n",
+    "        cost = tour_cost(d,tour)\n",
+    "        push!(costs, cost)\n",
+    "    end\n",
+    "\n",
+    "    return tours, costs\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
