Added landing stage

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2265,30 +2265,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Landing stage combine it later with the code\n",
-    "function levy_single(beta)\n",
-    "    num = gamma(1+beta) * sin(pi * beta / 2)\n",
-    "    den = gamma((1+beta) / 2) * beta * 2^((beta-1) / 2)\n",
-    "    sigma_u = (num / den)^(1 / beta)\n",
-    "    u = rand(Normal(0, sigma_u^2))\n",
-    "    v = rand(Normal(0, 1))\n",
-    "    z = u / (abs(v)^(1 / beta))\n",
-    "    return z\n",
-    "end\n",
-    "\n",
-    "if levy_single(1.5) > 0\n",
-    "\n",
-    "else\n",
-    "\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -2327,6 +2303,41 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Landing stage combine it later with the code\n",
+    "function levy_single(beta)\n",
+    "    num = gamma(1+beta) * sin(pi * beta / 2)\n",
+    "    den = gamma((1+beta) / 2) * beta * 2^((beta-1) / 2)\n",
+    "    sigma_u = (num / den)^(1 / beta)\n",
+    "    u = rand(Normal(0, sigma_u^2))\n",
+    "    v = rand(Normal(0, 1))\n",
+    "    z = u / (abs(v)^(1 / beta))\n",
+    "    return z\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if levy_single(1.5) > 0\n",
+    "\tfor i in 1:Popsize\n",
+    "\t\tdandelion[i], costs[i] = two_opt_tsp(d, dandelion[i])\n",
+    "\tend\n",
+    "else\n",
+    "\tfor i in 1:Popsize\n",
+    "\t\tdandelion[i], costs[i] = three_opt_tsp(d, dandelion[i])\n",
+    "\tend\n",
+    "end"
+   ]
   }
  ],
  "metadata": {
