Added rising stage and implemented to DO alg

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2265,6 +2265,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Landing stage combine it later with the code\n",
+    "function levy_single(beta)\n",
+    "    num = gamma(1+beta) * sin(pi * beta / 2)\n",
+    "    den = gamma((1+beta) / 2) * beta * 2^((beta-1) / 2)\n",
+    "    sigma_u = (num / den)^(1 / beta)\n",
+    "    u = rand(Normal(0, sigma_u^2))\n",
+    "    v = rand(Normal(0, 1))\n",
+    "    z = u / (abs(v)^(1 / beta))\n",
+    "    return z\n",
+    "end\n",
+    "\n",
+    "if levy_single(1.5) > 0\n",
+    "\n",
+    "else\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -2280,7 +2304,7 @@
     }
    ],
    "source": [
-    "function initialization(cities, d, Popsize, Dim)\n",
+    "function initialization_tsp(cities, d, Popsize, Dim)\n",
     "    d=pairwise(Euclidean(), cities, dims=2)\n",
     "    \n",
     "    tours = []\n",
@@ -2302,41 +2326,91 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Landing stage combine it later with the code\n",
-    "function levy_single(beta)\n",
-    "    num = gamma(1+beta) * sin(pi * beta / 2)\n",
-    "    den = gamma((1+beta) / 2) * beta * 2^((beta-1) / 2)\n",
-    "    sigma_u = (num / den)^(1 / beta)\n",
-    "    u = rand(Normal(0, sigma_u^2))\n",
-    "    v = rand(Normal(0, 1))\n",
-    "    z = u / (abs(v)^(1 / beta))\n",
-    "    return z\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if levy_single(1.5) > 0\n",
-    "\tfor i in 1:Popsize\n",
-    "\t\tdandelion[i], costs[i] = two_opt_tsp(d, dandelion[i])\n",
-    "\tend\n",
-    "else\n",
-    "\tfor i in 1:Popsize\n",
-    "\t\tdandelion[i], costs[i] = three_opt_tsp(d, dandelion[i])\n",
-    "\tend\n",
-    "end"
+    "function DO_tsp(Popsize, Maxiteration, Dim, cities)\n",
+    "    start_time = time()\n",
+    "    d=pairwise(Euclidean(), cities, dims=2)\n",
+    "    dandelions, dandelionsFitness = initialization_tsp(cities, d, Popsize, Dim)\n",
+    "    Convergence_curve = zeros(Maxiteration)\n",
+    "\n",
+    "    # Calculate the fitness values of initial dandelions.\n",
+    "    sorted_indexes = sortperm(dandelionsFitness)\n",
+    "    Best_position = dandelions[sorted_indexes[1], :]\n",
+    "    Best_fitness = dandelionsFitness[sorted_indexes[1]]\n",
+    "    Convergence_curve[1] = Best_fitness\n",
+    "    t = 2\n",
+    "\n",
+    "    while t < Maxiteration + 1\n",
+    "\n",
+    "        # dandelions_1 = zeros(Popsize, Dim)\n",
+    "\n",
+    "        ## Rising stage\n",
+    "        # beta = randn(Popsize, Dim)\n",
+    "        # alpha = rand() * ((1 / Maxiteration^2) * t^2 - 2 / Maxiteration * t + 1)  # eq.(8) in this paper\n",
+    "        # a = 1 / (Maxiteration^2 - 2 * Maxiteration + 1)  # Note: U can use positive or negative on 1 for solving ur problem.\n",
+    "        # b = -2a\n",
+    "        # c = 1 - a - b\n",
+    "        # k = 1 - rand() * (c + a * t^2 + b * t)  # eq.(11) in this paper\n",
+    "        if randn() < 1.5\n",
+    "            for i in 1:Popsize\n",
+    "                dandelions[i], costs[i] = three_opt_tsp(d, dandelions[i])\n",
+    "            end\n",
+    "        else\n",
+    "            for i in 1:Popsize\n",
+    "                dandelions[i], costs[i] = two_opt_tsp(d, dandelions[i])\n",
+    "            end\n",
+    "        end\n",
+    "\n",
+    "        ## Decline stage\n",
+    "        dandelions_mean = sum(dandelions, dims=1) / Popsize  # eq.(14) in this paper\n",
+    "        dandelions_2 = similar(dandelions)  # Preallocate dandelions_2 array\n",
+    "        for i in 1:Popsize\n",
+    "            for j in 1:Dim\n",
+    "                dandelions_2[i, j] = dandelions[i, j] - beta[i, j] * alpha * (dandelions_mean[1, j] - beta[i, j] * alpha * dandelions[i, j])  # eq.(13) in this paper\n",
+    "            end\n",
+    "        end\n",
+    "        dandelions .= dandelions_2\n",
+    "        # Check boundaries\n",
+    "        dandelions .= max.(dandelions, LB')\n",
+    "        dandelions .= min.(dandelions, UB')\n",
+    "\n",
+    "        ## Landing stage\n",
+    "        if levy_single(1.5) > 0\n",
+    "        \tfor i in 1:Popsize\n",
+    "        \t\tdandelion[i], costs[i] = two_opt_tsp(d, dandelion[i])\n",
+    "        \tend\n",
+    "        else\n",
+    "        \tfor i in 1:Popsize\n",
+    "        \t\tdandelion[i], costs[i] = three_opt_tsp(d, dandelion[i])\n",
+    "        \tend\n",
+    "        end\n",
+    "\n",
+    "        # Check boundaries\n",
+    "        dandelions = max.(dandelions, LB')  # Adjusted to update dandelions_3 directly\n",
+    "        dandelions = min.(dandelions, UB')\n",
+    "\n",
+    "        # Calculate fitness values\n",
+    "        for i in 1:Popsize\n",
+    "            dandelionsFitness[i] = Fobj(dandelions[i, :])\n",
+    "        end\n",
+    "\n",
+    "        sorted_indexes = sortperm(dandelionsFitness)\n",
+    "        dandelions = dandelions[sorted_indexes[1:Popsize], :]\n",
+    "        SortedfitbestN = dandelionsFitness[sorted_indexes[1:Popsize]]\n",
+    "\n",
+    "        # Update optimal seed\n",
+    "        if SortedfitbestN[1] < Best_fitness\n",
+    "            Best_position = dandelions[1, :]\n",
+    "            Best_fitness = SortedfitbestN[1]\n",
+    "        end\n",
+    "\n",
+    "        Convergence_curve[t] = Best_fitness\n",
+    "        t = t + 1\n",
+    "    end\n",
+    "    end_time = time()\n",
+    "    total_time = end_time - start_time\n",
+    "    return Best_fitness, Best_position, Convergence_curve, total_time\n",
+    "end\n"
    ]
   }
  ],
