Fixed bug with costs

--- a/DandelionOptimizer.ipynb
+++ b/DandelionOptimizer.ipynb
@@ -2353,11 +2353,11 @@
     "        # k = 1 - rand() * (c + a * t^2 + b * t)  # eq.(11) in this paper\n",
     "        if randn() < 1.5\n",
     "            for i in 1:Popsize\n",
-    "                dandelions[i], costs[i] = three_opt_tsp(d, dandelions[i])\n",
+    "                dandelions[i], dandelionsFitness[i] = three_opt_tsp(d, dandelions[i])\n",
     "            end\n",
     "        else\n",
     "            for i in 1:Popsize\n",
-    "                dandelions[i], costs[i] = two_opt_tsp(d, dandelions[i])\n",
+    "                dandelions[i], dandelionsFitness[i] = two_opt_tsp(d, dandelions[i])\n",
     "            end\n",
     "        end\n",
     "\n",
@@ -2377,11 +2377,11 @@
     "        ## Landing stage\n",
     "        if levy_single(1.5) > 0\n",
     "        \tfor i in 1:Popsize\n",
-    "        \t\tdandelion[i], costs[i] = two_opt_tsp(d, dandelion[i])\n",
+    "        \t\tdandelion[i], dandelionsFitness[i] = two_opt_tsp(d, dandelion[i])\n",
     "        \tend\n",
     "        else\n",
     "        \tfor i in 1:Popsize\n",
-    "        \t\tdandelion[i], costs[i] = three_opt_tsp(d, dandelion[i])\n",
+    "        \t\tdandelion[i], dandelionsFitness[i] = three_opt_tsp(d, dandelion[i])\n",
     "        \tend\n",
     "        end\n",
     "\n",
